--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="./imgs/logo.png" alt="logo">
                 </a>
                 <a class="nav-link d-none d-lg-block" href="#testimonial">
-                    <button class="ask-request">اطلب استشارّة</button>
+                    <button class="ask-request">اطلب استشارة</button>
                 </a>
                 <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                     <ul class="navbar-nav text-center py-4">
@@ -176,7 +176,7 @@
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                         </li>
                         <a class="nav-link d-block d-lg-none" href="#testimonial">
-                            <button class="ask-request">اطلب استشارّة</button>
+                            <button class="ask-request">اطلب استشارة</button>
                         </a>
                         <div
                             class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
@@ -1433,7 +1433,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1447,7 +1447,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1463,7 +1463,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1477,7 +1477,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1492,7 +1492,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1508,7 +1508,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1523,7 +1523,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1537,7 +1537,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1551,7 +1551,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1565,7 +1565,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1579,7 +1579,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1593,7 +1593,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1607,7 +1607,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1621,7 +1621,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1635,7 +1635,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
@@ -1649,7 +1649,7 @@
                             </p>
                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                 data-bs-target="#exampleModal">
-                                اطلب استشارّة
+                                اطلب استشارة
                             </button>
                         </div>
                     </div>
