--- a/human consulting.html
+++ b/human consulting.html
@@ -64,7 +64,7 @@
                         <img src="./imgs/logo.png" alt="logo">
                     </a>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
-                        <button class="ask-request">اطلب استشارّة</button>
+                        <button class="ask-request">اطلب استشارة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center align-items-center"
                         id="navbarNav">
@@ -151,7 +151,7 @@
                                 <a class="nav-link" href="contact-us.html">اتصل بنا</a>
                             </li>
                             <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
-                                <button class="ask-request">اطلب استشارّة</button>
+                                <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div
                                 class="col-md-6 text-start social-media-icons d-flex d-md-none justify-content-center align-items-center">
