--- a/info-gallery.html
+++ b/info-gallery.html
@@ -90,7 +90,7 @@
                         <img src="./imgs/icons/dark-logo.png" alt="logo">
                     </a>
                     <a class="nav-link d-none  d-lg-block" href="index.html#testimonial">
-                        <button class="ask-request">اطلب استشارّة</button>
+                        <button class="ask-request">اطلب استشارة</button>
                     </a>
                     <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
                         <ul class="navbar-nav text-center py-4 align-items-center">
@@ -176,7 +176,7 @@
                                 <a class="nav-link nav-link-3" href="contact-us.html">اتصل بنا</a>
                             </li>
                             <a class="nav-link d-block d-lg-none" href="index.html#testimonial">
-                                <button class="ask-request">اطلب استشارّة</button>
+                                <button class="ask-request">اطلب استشارة</button>
                             </a>
                             <div class="text-center social-media-icons d-flex d-md-none">
                                 <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
