--- a/financial consulting.html
+++ b/financial consulting.html
@@ -185,7 +185,7 @@
         </div>
     </section>
 
-    <section id="more-about-us">
+    <section id="more-about-us" class="wahed-class">
         <div class="container">
             <div class="more-about-us-block">
                 <p class="mb-5 mb-lg-0" data-aos="fade-left" data-aos-duration="1000">
@@ -245,7 +245,7 @@
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
                     <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير الدولية ونقدم
                         استشارات متخصصة لتحسين
-                        التخطيط الإداري والمالي وتحقيق النمو المستدام.</p>
+                        التخطيط الإداري والمالي وتحقيق <br class="d-none d-lg-block">النمو المستدام.</p>
                 </div>
             </div>
         </div>
