--- a/index.html
+++ b/index.html
@@ -2001,7 +2001,7 @@
                     </svg>
                 </button>
                 <div class="modal-header d-flex flex-column justify-content-center">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارّة</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارة</h1>
                     <p>استشارّة مجانية لمدة 30 دقيقة</p>
                 </div>
                 <div class="modal-body">
