--- a/marketing services.html
+++ b/marketing services.html
@@ -941,7 +941,7 @@
         </div>
     </section>
 
-    <section id="more-info" class="marketing-consulting-3">
+    <section id="more-info" class="marketing-consulting-3 wahed-marketing-consulting-3">
         <div class="container">
             <div class="mb-5 d-flex flex-column flex-lg-row align-items-center justify-content-between">
                 <div data-aos="fade-left" data-aos-duration="1000">
