--- a/blog.html
+++ b/blog.html
@@ -209,7 +209,8 @@
                         </div>
                         <div class="bottom">
                             <h4>دراسة الجدوى الاقتصادية</h4>
-                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا
+                                النص هو نص تجريبي <br class="d-none d-lg-block">لتعويض نص حقيقي
                                 سيزود لاحقاً، هذا النص هو نص
                                 تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
                             <span>اقرأ المزيد</span>
@@ -366,99 +367,100 @@
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <div class="row justify-content-between gy-4">
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="footer-block">
-                        <img src="imgs/logo.png" alt="logo" class="img-fluid logo">
-                        <p>شركة سلسلة هي أول شركة سعودية من نوعها في السوق السعودي</p>
-                        <div class="media d-flex align-items-center">
-                            <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
-                                target="_blank">
-                                <i class="fa fa-whatsapp"></i>
-                            </a>
-                            <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
-                                <img src="imgs/icons/Linked-In.svg" alt="">
-                            </a>
-                            <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
-                            </a>
-                            <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
-                                <img src="imgs/icons/footer-facebook.svg" alt="">
-                            </a>
-                            <a href="https://www.instagram.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/Instagram.svg" alt="">
-                            </a>
-                        </div>
+<footer>
+    <div class="container">
+        <div class="row justify-content-between gy-4">
+            <div class="col-lg-3 col-md-6 col-12">
+                <div class="footer-block">
+                    <img src="imgs/logo.png" alt="logo" class="img-fluid logo">
+                    <p>شركة سلسلة هي أول شركة سعودية من نوعها في السوق السعودي</p>
+                    <div class="media d-flex align-items-center">
+                        <a href="https://api.whatsapp.com/send/?phone=966555881764&text&type=phone_number&app_absent=0"
+                            target="_blank">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/slsalah-sa/" target="_blank">
+                            <img src="imgs/icons/Linked-In.svg" alt="">
+                        </a>
+                        <a href="https://twitter.com/slsalah_sa" target="_blank">
+                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
+                        </a>
+                        <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
+                            <img src="imgs/icons/footer-facebook.svg" alt="">
+                        </a>
+                        <a href="https://www.instagram.com/slsalah_sa" target="_blank">
+                            <img src="imgs/icons/Instagram.svg" alt="">
+                        </a>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
-                    <div class="footer-block">
-                        <h4>عن سلسلة</h4>
+            </div>
+            <div class="col-lg-2 col-md-6 col-12 p-0">
+                <div class="footer-block">
+                    <h4>عن سلسلة</h4>
+                    <ul>
+                        <li><a href="index.html">الصفحة الرئيسية</a></li>
+                        <li><a href="who-we-ara.html">من نحن</a></li>
+                        <li><a href="blog.html">المدونة</a></li>
+                        <li><a href="contact-us.html">اتصل بنا</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-6 col-12 p-0">
+                <div class="footer-block">
+                    <h4>خدماتنا</h4>
+                    <div class="d-md-flex gap-4">
                         <ul>
-                            <li><a href="index.html">الصفحة الرئيسية</a></li>
-                            <li><a href="who-we-ara.html">من نحن</a></li>
-                            <li><a href="blog.html">المدونة</a></li>
-                            <li><a href="contact-us.html">اتصل بنا</a></li>
+                            <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
+                            <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
+                            <li><a href="human consulting.html">استشارات الموارد البشرية</a></li>
+                            <li><a href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="footer-block">
-                        <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
-                            <ul>
-                                <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
-                                <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
-                                <li><a href="human consulting.html">استشارات الموارد البشرية</a></li>
-                                <li><a href="technical consulting.html">الاستشارات والحلول التقنية</a></li>
-                            </ul>
-                            <ul>
-                                <li><a href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
-                                <li><a href="marketing services.html">الخدمات التسويقية</a></li>
-                                <li><a href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-12">
-                    <div class="footer-block last-block">
-                        <h4>تواصل معنا</h4>
-                        <ul class="d-flex flex-column gy-5">
-                            <li>
-                                <a href="tel:+966555881764">
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span dir="ltr">+966 555 88 1764</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="tel:+966112074129">
-                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span dir="ltr">+966 112 07 4129</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:contact@slsalah.com">
-                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
-                                    <span>contact@slsalah.com</span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
-                                    <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
-                                        - الدور
-                                        الأرضي - مبنى 13
-                                    </span>
-                                </a>
-                            </li>
+                        <ul>
+                            <li><a href="marketing consulting.html">الاستشارات والحلول التسويقية</a></li>
+                            <li><a href="marketing services.html">الخدمات التسويقية</a></li>
+                            <li><a href="advertising services.html">خدمات التصميم والحملات الإعلانية</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-2 col-md-6 col-12">
+                <div class="footer-block last-block">
+                    <h4>تواصل معنا</h4>
+                    <ul class="d-flex flex-column gy-5">
+                        <li>
+                            <a href="tel:+966555881764">
+                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                <span dir="ltr">+966 555 88 1764</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="tel:+966112074129">
+                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                <span dir="ltr">+966 112 07 4129</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto:contact@slsalah.com">
+                                <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                <span>contact@slsalah.com</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
+                                <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
+                                <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                    العروبة
+                                    - الدور
+                                    الأرضي - مبنى 13
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </footer>
+    </div>
+</footer>
     <div class="copyRight">
         <p>جميع الحقوق محفوظة لشركة سلسلة 2023</p>
     </div>
