--- a/financial consulting.html
+++ b/financial consulting.html
@@ -186,16 +186,17 @@
     </section>
 
     <section id="more-about-us" class="wahed-class">
-        <div class="container">
+        <div class="container p-0">
             <div class="more-about-us-block">
-                <p class="mb-5 mb-lg-0" data-aos="fade-left" data-aos-duration="1000">
+                <p class="mb-5 mb-lg-0 new-p " data-aos="fade-left" data-aos-duration="1000">
                     نحن في مكتب سلسلة للاستشارات نقدم مجموعة واسعة من الاستشارات والحلول الإدارية والمالية للشركات
                     وروَاد الأعمال وأصحاب
                     المشاريع والمنشآت في المملكة العربية السعودية. نحن نسعى جاهدين لتحسين أداء الشركات وتطوير
                     استراتيجيات النجاح.
                 </p>
                 <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم1.svg"
-                    class="img-fluid avatar service-img-1" alt="img" data-aos="fade-right" data-aos-duration="1000">
+                    class="img-fluid avatar service-img-1 new-img" alt="img" data-aos="fade-right"
+                    data-aos-duration="1000">
             </div>
         </div>
     </section>
@@ -243,7 +244,8 @@
                 </figure>
                 <div class="our-importent-content col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
-                    <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير الدولية ونقدم
+                    <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير
+                        الدولية ونقدم
                         استشارات متخصصة لتحسين
                         التخطيط الإداري والمالي وتحقيق <br class="d-none d-lg-block">النمو المستدام.</p>
                 </div>
@@ -268,7 +270,7 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p data-aos="fade-down" data-aos-duration="1000">
+                <p data-aos="fade-down" data-aos-duration="1000" class="new-2">
                     إذا كنت تبحث عن استشارات إدارية ومالية متخصصة في المملكة العربية السعودية، فنحن في مكتب سلسلة
                     للاستشارات هنا لمساعدتك في
                     تحقيق أهدافك ونجاحك المستقبلي. اتصل بنا اليوم لمناقشة احتياجاتك وبدء رحلة التطوير والنمو معنا.
@@ -306,7 +308,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -317,10 +319,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
+                        <div class="d-md-flex gap-4">
                             <ul>
                                 <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
                                 <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
@@ -335,7 +337,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block last-block">
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
@@ -360,7 +362,8 @@
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                    <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                        العروبة
                                         - الدور
                                         الأرضي - مبنى 13
                                     </span>
