--- a/index.html
+++ b/index.html
@@ -1747,7 +1747,7 @@
                         <img src="imgs/portfolio/portfolio-5.webp" alt="portfolio-5" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
-                            <p class="w-100">تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة
                                 بكافة الحلول
                                 التقنية والتسويقية والمتابعة
                                 الدورية.</p>
@@ -1870,7 +1870,7 @@
                         <h4>انـضـم لـنـشـرتـنـا الـبـريـديـة</h4>
                         <p>مقالات غنية بالمعلومات المفيدة</p>
                         <div class="d-flex flex-wrap">
-                            <input type="email" placeholder="البريد الالكتروني">
+                            <input type="email" placeholder="البريد الالكتروني" class="form-control">
                             <a href="https://slsalah.space/signup">
                                 <button>سجل الآن</button>
                             </a>
@@ -1922,7 +1922,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -1933,10 +1933,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
+                        <div class="d-md-flex gap-4">
                             <ul>
                                 <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
                                 <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
@@ -1951,7 +1951,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block last-block">
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
@@ -1976,7 +1976,8 @@
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                    <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                        العروبة
                                         - الدور
                                         الأرضي - مبنى 13
                                     </span>
