--- a/marketing services.html
+++ b/marketing services.html
@@ -974,7 +974,7 @@
                         <h4>تحديث المعلومات والبيانات</h4>
                         <p>
                             الموجودة على صفحات موقعك بانتظام، لضمان<br class="d-none d-lg-block"> أنها دقيقة ومحدثة
-                            وتعكس خدماتك <br class="d-none d-lg-block">ومنتجاتك بشكل صحيح.
+                            وتعكس خدماتك ومنتجاتك بشكل صحيح.
                         </p>
                     </div>
                 </div>
@@ -2074,7 +2074,7 @@
                                 <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/fooer-twitter.svg" alt="">
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
                                 <img src="imgs/icons/footer-facebook.svg" alt="">
@@ -2085,7 +2085,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -2096,10 +2096,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
+                        <div class="d-md-flex gap-4">
                             <ul>
                                 <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
                                 <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
@@ -2114,7 +2114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block last-block">
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
@@ -2139,7 +2139,8 @@
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                    <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                        العروبة
                                         - الدور
                                         الأرضي - مبنى 13
                                     </span>
