--- a/contact-us.html
+++ b/contact-us.html
@@ -240,7 +240,7 @@
                                 <input value="ارسال" type="submit" class="form-control">
                             </div>
                         </form>
-                        <div class="d-flex gap-3 flex-wrap justify-content-center">
+                        <div class="d-flex gap-lg-1 gy-4 flex-wrap justify-content-between">
                             <div data-aos="fade-up" data-aos-duration="1000">
                                 <a href="mailto:contact@slsalah.com" class="d-flex align-items-center">
                                     <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
@@ -265,6 +265,24 @@
                                     <div class="d-flex flex-column">
                                         <span class="main-title">المكتب</span>
                                         <span class="child-title" dir="ltr">+966 112 07 4129</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div data-aos="fade-up" data-aos-duration="1000">
+                                <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" class="d-flex align-items-center"
+                                    target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512">
+                                        <path
+                                            d="M256 0c17.7 0 32 14.3 32 32V66.7C368.4 80.1 431.9 143.6 445.3 224H480c17.7 0 32 14.3 32 32s-14.3 32-32 32H445.3C431.9 368.4 368.4 431.9 288 445.3V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V445.3C143.6 431.9 80.1 368.4 66.7 288H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H66.7C80.1 143.6 143.6 80.1 224 66.7V32c0-17.7 14.3-32 32-32zM128 256a128 128 0 1 0 256 0 128 128 0 1 0 -256 0zm128-80a80 80 0 1 1 0 160 80 80 0 1 1 0-160z" />
+                                    </svg>
+                                    <div class="d-flex flex-column">
+                                        <span class="main-title">الموقع</span>
+                                        <span class="child-title new-child-title" dir="ltr">المملكة العربية السعودية -
+                                            الرياض - مجمع
+                                            ليسن فالي- طريق
+                                            العروبة
+                                            - الدور
+                                            الأرضي - مبنى 13</span>
                                     </div>
                                 </a>
                             </div>
@@ -308,7 +326,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -319,10 +337,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
+                        <div class="d-md-flex gap-4">
                             <ul>
                                 <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
                                 <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
@@ -337,7 +355,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block last-block">
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
@@ -362,7 +380,8 @@
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                    <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                        العروبة
                                         - الدور
                                         الأرضي - مبنى 13
                                     </span>
