--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -254,7 +254,7 @@
                 <p data-aos="fade-down" data-aos-duration="1000">
                     في مكتب سلسلة للاستشارات، نحن ملتزمون بتقديم خدمات عالية الجودة وتحقيق نتائج قابلة للقياس. اتصل بنا
                     اليوم للحصول على
-                    خدماتنا التسويقية والإبداعية<br class="d-none d-lg-block"> وبدء رحلة النجاح الرقمي. 
+                    خدماتنا التسويقية والإبداعية وبدء رحلة النجاح الرقمي. 
                 </p>
                 <a href="tel:+966112074129" class="call-us" data-aos="fade-down" data-aos-duration="1000">
                     <span>اتصل بنا</span>
@@ -278,7 +278,7 @@
                                 <img src="imgs/icons/Linked-In.svg" alt="">
                             </a>
                             <a href="https://twitter.com/slsalah_sa" target="_blank">
-                                <img src="imgs/icons/fooer-twitter.svg" alt="">
+                                <img src="imgs/icons/icons8-twitterx 1.svg" alt="">
                             </a>
                             <a href="https://www.facebook.com/Slsalah.sa" target="_blank">
                                 <img src="imgs/icons/footer-facebook.svg" alt="">
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>عن سلسلة</h4>
                         <ul>
@@ -300,10 +300,10 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12 p-0">
                     <div class="footer-block">
                         <h4>خدماتنا</h4>
-                        <div class="d-md-flex gap-3">
+                        <div class="d-md-flex gap-4">
                             <ul>
                                 <li><a href="financial consulting.html">الاستشارات والحلول الإدارية والمالية</a></li>
                                 <li><a href="legal advice.html">الاستشارات والحلول القانونية</a></li>
@@ -318,7 +318,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-2 col-md-6 col-12">
                     <div class="footer-block last-block">
                         <h4>تواصل معنا</h4>
                         <ul class="d-flex flex-column gy-5">
@@ -343,7 +343,8 @@
                             <li>
                                 <a href="https://maps.app.goo.gl/c2okMmkgw1xdezZh7" target="_blank">
                                     <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
-                                    <span class="lh-lg">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق العروبة
+                                    <span class="speciel">المملكة العربية السعودية - الرياض - مجمع ليسن فالي- طريق
+                                        العروبة
                                         - الدور
                                         الأرضي - مبنى 13
                                     </span>
