--- a/contact-us.html
+++ b/contact-us.html
@@ -240,7 +240,7 @@
                                 <input value="ارسال" type="submit" class="form-control">
                             </div>
                         </form>
-                        <div class="d-flex gap-lg-1 gy-4 flex-wrap justify-content-between">
+                        <div class="d-flex gap-lg-1 gap-4 flex-wrap justify-content-between">
                             <div data-aos="fade-up" data-aos-duration="1000">
                                 <a href="mailto:contact@slsalah.com" class="d-flex align-items-center">
                                     <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
@@ -277,7 +277,7 @@
                                     </svg>
                                     <div class="d-flex flex-column">
                                         <span class="main-title">الموقع</span>
-                                        <span class="child-title new-child-title" dir="ltr">المملكة العربية السعودية -
+                                        <span class="child-title new-child-title" dir="rtl">المملكة العربية السعودية -
                                             الرياض - مجمع
                                             ليسن فالي- طريق
                                             العروبة
