--- a/financial consulting.html
+++ b/financial consulting.html
@@ -247,7 +247,7 @@
                     <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير
                         الدولية ونقدم
                         استشارات متخصصة لتحسين
-                        التخطيط الإداري والمالي وتحقيق <br class="d-none d-lg-block">النمو المستدام.</p>
+                        التخطيط الإداري والمالي وتحقيق النمو المستدام.</p>
                 </div>
             </div>
         </div>
