--- a/marketing services.html
+++ b/marketing services.html
@@ -974,14 +974,14 @@
                         <h4>تحديث المعلومات والبيانات</h4>
                         <p>
                             الموجودة على صفحات موقعك بانتظام، لضمان<br class="d-none d-lg-block"> أنها دقيقة ومحدثة
-                            وتعكس خدماتك ومنتجاتك بشكل صحيح.
+                            وتعكس خدماتك ومنتجاتك <br class="d-none d-lg-block">بشكل صحيح.
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-12" data-aos="fade-up-left" data-aos-duration="1000">
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/Video Trimming.png" class="img-fluid" alt="icon">
-                        <h4>تصميم وإنتاج المحتوى المرئي والفيديوهات التوضيحية:</h4>
+                        <h4>تصميم وإنتاج المحتوى المرئي والفيديوهات <br class="d-none d-lg-block"> التوضيحية:</h4>
                         <p>
                             نساعدك في إنشاء محتوى مرئي جذاب وفيديوهات<br class="d-none d-lg-block"> توضيحية تعزز فهم
                             وتوضيح خدماتك ومنتجاتك <br class="d-none d-lg-block">بشكل فعال.
